Updated symbol table logic and structure based on professor feedback